--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask
-transformers
-python-dotenv
-pandas
-datasets
-psutil
+Flask==2.3.3
+transformers==4.38.0
+python-dotenv==1.0.0
+pandas==2.1.0
+datasets==2.15.0
+psutil==5.9.5
 torch==2.5.1
-sympy==1.13.1
+sympy==1.14
 mpmath==1.3.0
-gunicorn==22.0.0
+gunicorn==23.1.0
